Aggiornato il file tex
Aggiornamento alla versione 2 alla luce di alcune correzioni sul testo.

--- a/compiti.tex
+++ b/compiti.tex
@@ -42,8 +42,8 @@
 	\item \quad \(8738 \times 107 = \)
 	\item \quad \(1,23 \times 0,06 = \)
 	\item {Di quanto aumenta un numero di due cifre, avente la cifra delle decine uguale a 5, se si inserisce uno zero tra la cifra delle decine e quella delle unità?}
-	\item \quad \(347 - 4 \times \{ 25 - 7 \times [ 18 - 12 \times \, 3 \times 4 - 11\, - 2 \times 3 ] \} \) \result{247}
-	\item \quad \(\{ [ \, 0,05 + 0,2 \times 0,7 \, \times 0,4 + 0,8 \times 0,03] \times 0,3 + 0,5 \} \times 2 - 1 \) \result{0,06}
+	\item \quad \(347 - 4 \times \{ 25 - 7 \times [ 18 - 12 \times ( 3 \times 4 - 11 ) - 2 \times 3 ] \} \) \result{247}
+	\item \quad \(\{ [ ( 0,05 + 0,2 \times 0,7 ) \times 0,4 + 0,8 \times 0,03] \times 0,3 + 0,5 \} \times 2 - 1 \) \result{0,06}
 	\item {Se si raddoppia ciascuno dei due fattori di una moltiplicazione, come varia il prodotto?}
 	\item {Dire se le seguenti proposizioni sono vere o false:
 	\begin{itemize}
@@ -55,9 +55,9 @@
 	\end{itemize}
 	}
 
-	\item \quad \( \{ 3 + 196 : [7+7\times\,15:3-2\,]-\,8\times9-12\,:12 \}:[\,9\times9+12\,:3-78:3] \) \result{1}
+	\item \quad \( \{ 3 + 196 : [7+7\times(15:3-2)]-(8\times9-12):12 \}:[(9\times9+12):3-78:3] \) \result{1}
 	
-	\item \quad \(\,0,3+2\times0,6\,:\{[\,1,3\times2,4-2,375\,:0,05+\,1,1]\times0,03+\,5\times6+1,2:0,3\,\times0,03\}+9\) \result{10}
+	\item \quad \((0,3+2\times0,6):\{[(1,3\times2,4-2,375):0,05+1,1]\times0,03+(5\times6+1,2:0,3)\times0,03\}+9\) \result{10}
 	
 	\item {Di quanto si deve diminuire il lato di un quadrato, lungo 118 cm, per far diminuire l'area di 2043 cm\(^2\)} \result{9 cm}
 	
@@ -67,10 +67,10 @@
 	
 	\item {Risolvi le seguenti espressioni numeriche in \(\mathbb{N}\) applicando, quando possibile, le proprietà delle potenze:
 		\begin{enumerate}[a.]
-			\item \([4^2\times(4\times4^3)^2:4^6]^2:\,4^3\times4^2\) \result{\(4^3\)}
+			\item \([4^2\times(4\times4^3)^2:4^6]^2:(4^3\times4^2) \) \result{\(4^3\)}
 			\item \([(3^4\times3^5)^2:3^{10}]^2:\{3^{10}:[(3^8:3^5):3]^3\}^2\) \result{\(3^8\)}
-			\item \([(5^2\times5)^4:5^9]^4\times[(5^4:5^2)^3:(5^2\times5^3)]^0\) \result{\(5^12\)}
-			\item \({[2^7:(2^8:2^5)^2]^{10}:2^4}^5:[(2^3\times2^2\times2)^3:2^8]^3\) \result{1}
+			\item \([(5^2\times5)^4:5^9]^4\times[(5^4:5^2)^3:(5^2\times5^3)]^0\) \result{\(5^{12}\)}
+			\item \(\{[2^7:(2^8:2^5)^2]^{10}:2^4\}^5:[(2^3\times2^2\times2)^3:2^8]^3\) \result{1}
 			\item \(\{[(7^3)^2:(7^5:7^2)]^2:(7^4\times7)\}^3\times[(7\times7^0)^0\times7^2]^2\) \result{\(7^7\)}
 			\item \(\{[(3^2)^3\times3^2]^2:(3\times3^3)^4\}^7\times[(3^2\times3^3)^2:3^5]^2\) \result{\(3^{10}\)}
 			\item \(100^3:\{[2^2+(5^2:5^2+5):26]^2:3+(18^3:6^3)-2^2\}^3\) \result{8}
@@ -180,7 +180,7 @@
 			
 			\item \(\quad0,4\overline{6}\times0,\overline{45}+0,75:3,\overline6\) \result{\(	\frac5{12}\)}
 			
-			\item \(\quad30-12,75:(0,0\overline5+0,41\overline6\) \result{3}
+			\item \(\quad30-12,75:(0,0\overline5+0,41\overline6) \) \result{3}
 		\end{enumerate}
 		
 		\item Eseguire le seguenti addizioni mediante le opportune equivalenze:
@@ -266,7 +266,8 @@
 
 \begin{center}
 	Realizzato utilizzando \LaTeX \\ Guarda il codice, commenta e apporta migliorie su GitHub \includegraphics[height=0.25cm]{git} \\ \parskip=25pt
-\tiny{https://github.com/AlexF1789/compitiPrime}
+\tiny{https://github.com/AlexF1789/compitiPrime} \\
+\vspace*{1cm}versione 2
 \end{center}
 
 \end{document}
