--- a/compiti.tex
+++ b/compiti.tex
@@ -61,7 +61,7 @@
 	
 	\item {Di quanto si deve diminuire il lato di un quadrato, lungo 118 cm, per far diminuire l'area di 2043 cm\(^2\)} \result{9 cm}
 	
-	\item {Da un foglio di carta quadrata la cui area è 10404 cm\(^2\), si vogliono ritagliare dei quadratini, aventi ciascuno il lato lungo 4 cm. Calcolare il massimo numero di quadratini che si possono ottenere.} \result{650}
+	\item {Da un foglio di carta quadrata la cui area è 10404 cm\(^2\), si vogliono ritagliare dei quadratini, aventi ciascuno il lato lungo 4 cm. Calcolare il massimo numero di quadratini che si possono ottenere.} \result{625}
 	
 	\item {In una cassa a forma di cubo con lo spigolo lungo 1,65 m si ripongono dei cubi di legno aventi ciascuno spigolo pari a 12 cm. Quanti cubi contiene la cassa? Qual è il volume della parte di cassa non utilizzata?} \result{2197; 696 cm\(^3\)}
 	
@@ -73,7 +73,7 @@
 			\item \(\{[2^7:(2^8:2^5)^2]^{10}:2^4\}^5:[(2^3\times2^2\times2)^3:2^8]^3\) \result{1}
 			\item \(\{[(7^3)^2:(7^5:7^2)]^2:(7^4\times7)\}^3\times[(7\times7^0)^0\times7^2]^2\) \result{\(7^7\)}
 			\item \(\{[(3^2)^3\times3^2]^2:(3\times3^3)^4\}^7\times[(3^2\times3^3)^2:3^5]^2\) \result{\(3^{10}\)}
-			\item \(100^3:\{[2^2+(5^2:5^2+5):26]^2:3+(18^3:6^3)-2^2\}^3\) \result{8}
+			\item \(100^3:\{2 +(10^3:2^3:5^{2})^2+(18^3:6^3)-2^2\}^3\) \result{8}
 		\end{enumerate}
 	}
 
@@ -158,11 +158,11 @@
 	
 		\[a.\quad \left( 1-\frac23+\frac14 \right)^2\times\frac{48}{35}-\left(\frac35\right)^2\times\frac5{21}-\left(\frac12\right)^3:\frac7{12}\qquad\qquad\qquad\left[\frac16\right] \]
 		
-		\[b.\quad\frac1{20}\times\left[\left(2+\frac13\right)^2\times\frac37-1\right]^2+\left(a+\frac23-\frac32\right)^2-\frac1{30}\qquad\qquad\qquad\left[\frac1{12}\right]\]
+		\[b.\quad\frac1{20}\times\left[\left(2+\frac13\right)^2\times\frac37-1\right]^2+\left(1+\frac23-\frac32\right)^2-\frac1{30}\qquad\qquad\qquad\left[\frac1{12}\right]\]
 		
 		\[c.\quad\frac3{10}+\frac{33}{40}:\Bigg\{\frac3{10}+\frac57\times\frac{16}{35}\times\left[\left(\frac76-\frac34\right)^2:\frac5{36}-\frac38\right]^2\Bigg\}\qquad\qquad\qquad\left[\frac95\right]\]
 		
-		\[d.\quad\Bigg\{\left[\left(\frac52\right)^3-\left(\frac74-\frac56\right)\times\frac{10}{33}\times\left(\frac32\right)^2\frac56\right]\times\frac3{17}-\frac74\Bigg\}\times\left(\frac23\right)^2\qquad\qquad\qquad\left[\frac3{16}\right]\]
+		\[d.\quad\Bigg\{\left[\left(\frac52\right)^3-\left(\frac74-\frac56\right)\times\frac{10}{33}\times\left(\frac32\right)^2-\frac56\right]\times\frac3{17}-\frac74\Bigg\}^3\times\left(\frac23\right)^2\qquad\qquad\qquad\left[\frac3{16}\right]\]
 		
 		\[e.\quad\Bigg\{\left[\left(\frac7{58}+\frac4{87}-\frac13:2\right)^3:\frac3{13}+\frac4{15}\right]^2:\left(\frac35\right)^2-\left(\frac23\right)^4\Bigg\}:\frac{19}{17}+1\qquad\qquad\qquad\left[1\right]\]
 		
@@ -237,7 +237,7 @@
 		
 		Qual è la percentuale degli alunni che hanno meritato la sufficienza? \result{60\%}
 		
-		\item Una campana di bronzo è stata fabbricata fondendo dello stagno con 2,24 q di rame. Se la massa del rame è il 32\% della massa della campana, quanto stagno è occorso per la fusione? \result{4,72 q}
+		\item Una campana di bronzo è stata fabbricata fondendo dello stagno con 2,24 q di rame. Se la massa del rame è il 32\% della massa della campana, quanto stagno è occorso per la fusione? \result{4,76 q}
 		
 		\item Una puleggia compie 690 giri ogni 12 minuti; quanti giri compirà in 26 minuti ruotando sempre alla stessa velocità? \result{1495}
 		
@@ -267,7 +267,7 @@
 \begin{center}
 	Realizzato utilizzando \LaTeX \\ Guarda il codice, commenta e apporta migliorie su GitHub \includegraphics[height=0.25cm]{git} \\ \parskip=25pt
 \tiny{https://github.com/AlexF1789/compitiPrime} \\
-\vspace*{1cm}versione 2
+\vspace*{1cm}versione 3
 \end{center}
 
 \end{document}
